fixed spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -296,7 +296,7 @@ footer p {
   font-size: 1rem;
 }
 main {
-  width: 100%;
+  width: 107%;
   margin: 0 auto;
   transition: all 0.4s;
   margin-bottom: auto;
