--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,6 @@
 
 main {
-  width: 100%;
+  width: 107%;
   margin: 0 auto;
   transition: all .4s;
   margin-bottom: auto;
